--- a/后台代码/Garleton/WebRoot/css/admin.css
+++ b/后台代码/Garleton/WebRoot/css/admin.css
@@ -1,4 +1,6 @@
 /*  */
+
+
 #nav_bar ul li {
 	position:relative;
 }
@@ -12,7 +14,45 @@
 	display:none;
 }
 
-
 #nav_bar ul li ul li:last-of-type {
 	padding-right:0;
 }
+
+#main_block header {
+
+	font-size:20px;
+	
+	font-weight:bold;
+	
+	margin-left:40px;
+	
+	margin-top:20px;
+	
+}
+
+#content {
+
+	 column-count:3;
+     -webkit-column-count:3;
+
+}
+
+
+#content input {
+	margin-left:40px;
+	margin-top:10px;
+}
+
+#content a:first-of-type {
+
+	display:inline-block;
+	
+	margin-left:40px;
+	
+	margin-right:20px;
+	
+	margin-top:10px;
+	
+}
+
+
