--- a/后台代码/Garleton/WebRoot/css/search_icon.css
+++ b/后台代码/Garleton/WebRoot/css/search_icon.css
@@ -1,11 +1,10 @@
 
 .search {
 	margin-top:30px;
-	float:left;
+	float:right;
 	height:26px;
 	background:#fff;
 	border-radius:5px;
-
 }
 
 
@@ -49,17 +48,24 @@
 	color:black;
 }
 
-
-#search_bar {
+.search_ajax {
+	position:relative;
 	display: inline-block;
 	width: 200px;
 	float: left;
 	font-size: 14px;
 	height:26px;
-	line-heigth: 26px;
 	background-color: #fff;
 	border:none;
-	
+}
+
+#search_bar {
+
+	width: 100%;
+	height:100%;
+	line-heigth: 26px;
+	border:none;
+
 }
 
 #search_bar:focus {
@@ -67,6 +73,23 @@
 	outline:none;
 }
 
+#search_result {
+
+	box-sizing:border-box;
+	position:absolute;
+	left:0;
+	top:0;
+	width:100%;
+	margin-top:26px;
+	border:1px solid gray;
+	
+}
+
+#search_result a {
+	display:block;
+	width:100%;
+	cursor:pointer;
+}
 
 .search .icon {
 	display: inline-block;
